<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hometown Portal</string>
    <string name="action_settings">Settings</string>
    <string name="header">Welcome to Panama City!</string>
    <string name="entertainment">Entertainment</string>
    <string name="dining">Dining</string>
    <string name="shopping">Shopping</string>
    <string name="employment">Employment</string>
    <string name="schools">Schools</string>
    <string name="news">News</string>
    <string name="history">History</string>
    <string name="submit">Submit</string>
    <string name="shopping_prompt">Narrow your search</string>
    <string-array name="shop_options">
        <item>See All</item>
        <item>Malls</item>
        <item>Specialty Shops</item>
    </string-array>
    <string-array name="entertainment_options">
        <item>Parks</item>
        <item>Nightlife</item>
        <item>Arts</item>
    </string-array>
    <color name="AliceBlue">#F0F8FF</color>

</resources>
